Flatzinc compiler and tseitin transformation for optimized solvers